--- a/package.json
+++ b/package.json
@@ -24,41 +24,36 @@
     "node": ">=20.19 <22 || >=22.12"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.3",
-    "@react-router/dev": "^7.12.0",
-    "@react-router/fs-routes": "^7.12.0",
-    "@react-router/node": "^7.12.0",
-    "@react-router/serve": "^7.12.0",
-    "@remix-run/node": "^2.17.4",
-    "@remix-run/react": "^2.17.4",
-    "@shopify/app-bridge-react": "^4.2.4",
-    "@shopify/shopify-app-react-router": "^1.1.0",
-    "@shopify/shopify-app-session-storage-prisma": "^8.0.0",
-    "isbot": "^5.1.31",
-    "prisma": "^6.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.12.0",
+    "@remix-run/react": "^2.16.0",
+    "@remix-run/node": "^2.16.0",
+    "prisma": "^6.16.3",
+    "@prisma/client": "^6.16.3",
+    "@shopify/shopify-app-react-router": "^1.1.0",
+    "@shopify/app-bridge-react": "^4.2.4",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
+    "isbot": "^5.1.31",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@shopify/api-codegen-preset": "^1.2.0",
-    "@shopify/polaris-types": "^1.0.1",
-    "@types/eslint": "^9.6.1",
-    "@types/node": "^22.18.8",
+    "typescript": "^5.9.3",
     "@types/react": "^18.3.25",
     "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@types/node": "^22.18.8",
     "eslint": "^8.57.1",
-    "eslint-import-resolver-typescript": "^3.10.1",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier": "^3.6.2",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@shopify/api-codegen-preset": "^1.2.0",
+    "@shopify/polaris-types": "^1.0.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-import-resolver-typescript": "^3.10.1",
     "graphql-config": "^5.1.1",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3",
     "vite": "^6.3.6"
   },
   "workspaces": [
